# ffst-parts

./: CNAME  Cargo.toml  design.md  index.css  index.html  index.js  onshape.css  onshape.html  onshape.js  style.css  tutorial.html
builder/: Cargo.toml
builder/src/: main.rs
ffst-parts-onshape/: Cargo.toml
ffst-parts-onshape/src/: lib.rs
output/: .gitignore  onshape.html  style.css
