[package]
name = "ffst-parts-onshape"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "FormData",
    "Storage"
]}
futures = "0.3"
